manifests/treino-rails/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: treino-rails
  labels:
    app: treino-rails
spec:
  replicas: 1
  selector:
    matchLabels:
      app: treino-rails
  template:
    metadata:
      labels:
        app: treino-rails
    spec:
      containers:
        - name: api
          image: ghcr.io/switchdreams/devops-training:1.0.0
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              memory: 400Mi
          livenessProbe:
            httpGet:
              path: /up
              port: http
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /up
              port: http
            failureThreshold: 3
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /up
              port: http
            failureThreshold: 18
            periodSeconds: 10
