manifests/treino-rails/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: treino-rails
  labels:
    app: treino-rails
spec:
  type: ClusterIP
  selector:
    app: treino-rails
  ports:
    - name: http
      port: 80
      targetPort: http
