manifests/treino-rails/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: treino-rails
  labels:
    app: treino-rails
spec:
  ingressClassName: nginx
  rules:
    - host: app.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: treino-rails
                port:
                  name: http
